add unit tests to cover ranking endpoint